--- a/style.css
+++ b/style.css
@@ -1,5 +1,29 @@
-body {
+* {
+  padding: 0;
   margin: 0;
+}
+
+body {
   width: 100%;
   height: 100%;
+}
+
+.title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  text-align: center;
+}
+
+.title h1 {
+  font-size: 6rem;
+  text-shadow: 0px 4px 10px black;
+  white-space: nowrap;
+}
+
+.title h3 {
+  font-size: 1.6rem;
+  text-shadow: 0px 4px 10px black;
 }
